feat(main): add files lab-3

--- a/labs/lab02/report/Л02_Мусатова_отчёт.md
+++ b/labs/lab02/report/Л02_Мусатова_отчёт.md
@@ -1,8 +1,8 @@
 ---
 ## Front matter
-title: "Шаблон отчёта по лабораторной работе"
+title: "Отчёт по лабораторной работе № 2"
 subtitle: "Простейший вариант"
-author: "Дмитрий Сергеевич Кулябов"
+author: "Мусатова Екатерина Викторовна"
 
 ## Generic otions
 lang: ru-RU
