feat(main): add files lab-3

--- a/labs/lab02/report/Л02_Мусатова_отчет.md
+++ b/labs/lab02/report/Л02_Мусатова_отчет.md
@@ -1,8 +1,8 @@
 ---
 ## Front matter
 title: "Очёт по лабораторной работе № 2"
-subtitle: "Архитектура компьютеров"
-author: "Мусатова Екатерина"
+subtitle: "Дисциплина: архитектура компьютера"
+author: "Мусатова Екатерина Викторовна"
 
 ## Generic otions
 lang: ru-RU
