--- a/labs/lab03/report/Л03_Мусатова_отчёт.md
+++ b/labs/lab03/report/Л03_Мусатова_отчёт.md
@@ -2,7 +2,7 @@
 ## Front matter
 title: "Отчёт по лабораторной работе №3"
 subtitle: "Дисциплина: архитектура компьютера"
-author: "Аветисян Алина Эдуардовна "
+author: "Мусатова Екатерина Викторовна"
 
 ## Generic otions
 lang: ru-RU
@@ -92,7 +92,7 @@ header-includes:
 
 **4**
 
-Удалила новые компилированные файлы и сразу проверила.
+Удалила новые компилированные файлы и сразу проверила удалились ли они.
 
 ![Удаление  файлов](image/4.png){#fig:001 width=70%}
 
@@ -118,7 +118,7 @@ header-includes:
 
 **1**
 
-Перехожу в каталог предыдущей лабораторной работы. Открываю шаблон в редакторе и запоняю.
+Перехожу в каталог предыдущей лабораторной работы, открываю шаблон в редакторе и запоняю.
 
 ![Отерытие католога c 2 лабой и редакция ](image/8.png){#fig:001 width=70%}
 
@@ -142,7 +142,7 @@ header-includes:
 
 # Вывод
 
-В этой лабораторной работе я освоила процедуру оформления  отчетов с помощью  Markdown. 
+В этой лабораторной работе я освоила процедуру оформления  отчетов с помощью  языка разметки Markdown. 
 
 ::: {#refs}
 :::
